2000-06-11  Ion Badulescu  <ib42@moisil.cs.columbia.edu>

	* amd/opts.c (eval_selectors): don't deref opt after it's been
	XFREE'd

2000-06-11  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* amd/opts.c: move mount_type expansion until later in the list,
	so common variable are "hit" first.

2000-06-11  Ion Badulescu  <ib42@moisil.cs.columbia.edu>

	* amd/opts.c (split_opts, eval_selectors): split old function
	eval_opts into two, one that only splits non-selectors and
	assigns the values to fs_static, and one that only evaluates
	selectors; also simplified the rather obfuscated logic inside
	these functions
	(expand_op): made it take a char * instead of a structure from
	which it was using only one field (a char *). Also now returns a
	char * instead of modifying said structure in place
	(expand_opts): deal with the change above
	(expand_selectors): renamed from expand_key
	(expand_options): new function, expands non-selectors; it's the
	complement of expand_selectors, both of which are just wrappers
	around expand_op()
	(eval_fs_opts): use the new split_opts, eval_selectors to allow
	using options (like ${rhost}) in selectors

2000-06-11  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* config.guess.long: munge config.guess' output so that intel
	linux appears as i386-pc-linux

Fri Jun  9 16:06:56 2000  Erez Zadok  <ezk@defiant.dev.hydraweb.com>

	* conf/nfs_prot/nfs_prot_bsdi2.h: getifaddrs() on bsdi2 is broken.
	Don't use it.

2000-06-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/mapc.c (maptypes): Change default allocation mode to
	MAPC_INC where reload support is missing to avoid warning in
	mapc_create().

2000-06-09  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* conf/nfs_prot/nfs_prot_sunos5_5.h: turn off autofs support for
	solaris 2.5 until a full port can be done.

2000-06-07  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* Makefile.am, aux/GNUmakefile: fix maintainer rules to update
	config.* and texinfo.tex files.
